# directus-sdk-python

./: .pylintrc  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
directus/: directus.py  exceptions.py  typing.py
directus/models/: __init__.py  request.py
directus/modules/: __init__.py  collections.py  files.py  items.py
directus/utils/: apiclient.py
directus_api/: __init__.py  directus.py  exceptions.py  typing.py
directus_api/utils/: apiclient.py
tests/: test_directus.py
